[tool.poetry]
name = "bertopic-tutorial"
version = "0.1.0"
description = ""
authors = ["Vetle960 <76944630+Vetle960@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bertopic = "^0.16.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
plotly = "^5.21.0"
jupyter = "^1.0.0"
sentence-transformers = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
